yml-Files/deployment.yml
apiVersion: app/v1
kind: Deployment
metadata:
  name: knote
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: knote
  template:
    metadata:
      labels:
        app: knote
    spec:
      containers:
        - name: app
          image: devops2022.azurecr.io/comicbook:e938199b57962a0203a58d5d886a795478b32847 
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
