yml-Files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: knote
spec:
  selector:
    app: knote
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30006
  type: nodePort
