yml-Files/allinone.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testcomic
spec:
  ports: 
  replicas: 1
  selector:
    matchLabels:
      app: testcomic
  template:
    metadata:
      labels:
        app: testcomic
    spec:
      containers:
      - name: nginxcomic
        image: devops2022.azurecr.io/comicbook:4430e7e40c5e7253b3e3c7452b94550e9edc2bc3 
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /etc/nginx/conf.d
            name: nginx-conf
            readOnly: true
        resources:
          limits: 
            memory: 512Mi
            cpu: "1"
      - name: adapter
        image:/nginx-prometheus-exporter:0.8.0
        args: ["-nginx.scrape-url", "https://localhost/nginx_status"]
        ports:
          - containerPort: 9113
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-configmap
            items:
              - key: default.conf
                path: default.conf    
---
apiVersion: v1
kind: Service
metadata:
  name: testcomic-service
spec:
  selector:
    app: testcomic
  ports:
    - name: ngmon
      protocol: TCP
      port: 80
      targetPort: 9113
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comicingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts: 
      - devopsdaemons.devops2022.de
      secretName: fakecertificate-tls
  rules:
  - host: devopsdaemons.devops2022.de
    http:
      paths:
      - path: /.*
        pathType: Prefix
        backend:
          service:
            name: testcomic-service
            port:
              number: 80
