yml-Files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comicingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernets.io/target-type: ip
    alb.ingress.kubernetes.io/rewrite-target: /
    alb.ingress.kubernetes.io/ssl-redirect: "true"
    alb.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts: 
      - devopsdaemons.devops2022.de
      secretName: fakecertificate-tls
  rules:
  - host: devopsdaemons.devops2022.de
    http:
      paths:
      - path: "/nodejs"
        pathType: Prefix
        backend:
          service:
            name: knote
            port:
              number: 80
